# fluxer-tui

./: .gitignore  Cargo.toml  README.md  cliff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  platform_packaging.yml  regression.yml
.github/workflows/: ci.yml  cross-powerpc.yml  release.yml
aur/: PKGBUILD  PKGBUILD-git
scripts/: bump-version.sh
src/: app.rs  auth.rs  config.rs  events.rs  main.rs  permissions.rs  slash_commands.rs
src/api/: client.rs  gateway.rs  mod.rs  types.rs
src/media/: chafa.rs  gif_anim.rs  mod.rs  open_external.rs
src/ui/: ansi_line.rs  channel_picker.rs  command_popup.rs  emoji_popup.rs  help_overlay.rs  image_preview.rs  input_bar.rs  input_word_wrap.rs  mention_popup.rs  message_markdown.rs  message_pane.rs  mod.rs  server_notifications_overlay.rs  settings_overlay.rs  sidebar.rs  status_bar.rs  theme.rs
